-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.5.2, 6.6
-
None
-
1 Laptop 1 PC both Windows 10.
PC has an older Version of Windows installed.
-
-
42107b9d2 (dev), abe9bdadc (6.5), c52c908d9 (6.6)
Hi,
i am unable to play some Videos (with QMediaPlayer) generated by Gstreamer and openH264 as encoder (old h264 standard).
With windows set as the backend it always works fine,
but on my laptop if I use the default backend I can play the Video but it shows "seekable true / duration = 0 / position = 0" and if I set the position the video starts at the beginning.
On the other PC if I use the default backend I get a flickering stream of the first second that is showing in purple and green colors and "seekable true / duration = 0 / position = 0".
The Video itself plays fine in Windows Media Player or VLC
- relates to
-
QTBUG-110705 With AudioOutput some videos cannot be paused or forwarded on Windows
-
- Closed
-
-
QTBUG-117075 ffmpeg backend always report duration 0 for webm file
-
- Closed
-
For Gerrit Dashboard: QTBUG-115747 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
495712,3 | Fix mediaplayer scroll issue if stream duration is missing | dev | qt/qtmultimedia | Status: MERGED | +2 | 0 |
495758,2 | Fix mediaplayer scroll issue if stream duration is missing | 6.6 | qt/qtmultimedia | Status: MERGED | +2 | 0 |
495759,2 | Fix mediaplayer scroll issue if stream duration is missing | 6.5 | qt/qtmultimedia | Status: MERGED | +2 | 0 |